# Parcial2

./: .gitignore  CMakeLists.txt  RWBLOQUE.h  RWesquema.h  RWhelper.h  Titanic.csv  bloques.txt  caracteristicasDisco.txt  esquemas.txt  main.cpp  makefile  regFijos.h
include/: BufferManager.h  BufferPool.h  Frame.h  Page.h  diskSpaceManager.h
src/: BufferManager.cpp  Buffer_Pool.cpp  Frame.cpp  Page.cpp  diskSpaceManager.cpp
